# afb_detection

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: format.yml  test.yml  todo.yml
datasets/: README.md
metadata/: specimens.csv  wsi.csv
notebooks/: cherry_picked_tiles.csv  paper_plots.py  tile_grid_fig.py
results/: README.md
src/afb/: __init__.py  config.py  inference.py  train.py
src/afb/data/: image_annotation.py  image_id.py  lab_id.py  m48_scale.py  metadata.py  specimen.py  transforms.py  wsi_tiles_dataset.py
src/afb/data/schema/: pandas.py
src/afb/models/: base.py  torch_viz_obj_det.py
src/afb/utils/: bbox.py  geometry.py  gpus.py  postproc.py  training.py  validation.py  viz.py
